add file for gh-pages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+
+    <!-- header -->
     <header class="header">
         <div class="container">
             <section class="header-top">
@@ -67,6 +69,7 @@
         </div>
     </header>
 
+    <!-- main -->
     <main class="main">
         <section class="works">
             <div class="container">
@@ -175,6 +178,7 @@
         </section>
     </main>
 
+    <!-- footer -->
     <footer class="footer">
         <section class="footer-top">
             <div class="container">
